# htracker

./: .gitignore  Cargo.toml  Makefile  Makefile.toml  README.md  package-lock.json
htracker-server/: Cargo.toml  Makefile  README.md  htracker.service  tailwind.config.js
htracker-server/public/: error_page.html  index.html  index.js
htracker-server/public/dashboard/: dashboard.html  dashboard.js
htracker-server/public/login/: login.html  login.js
htracker-server/res/: MAILJET_PUBLIC_KEY  MAILJET_SECRET_KEY  quotes
htracker-server/src/: auth.rs  email.rs  main.rs  public.rs  quote.rs
htracker-server/src/auth/: login.rs  mod.rs  register.rs  validate.rs  verify.rs
htracker-server/src/data/: mod.rs  retrieve.rs  tasks.rs  todo.rs
htracker-server/static/: index.html
htracker-server/web/: error_page.html  index.html  index.js  tailwind.css
htracker-server/web/dashboard/: dashboard.html
htracker-server/web/login/: login.js
htracker-server/web/register/: register.html
mobile-app/: App.js  app.json  eas.json  package-lock.json  package.json
old-web/dashboard/: dashboard.js
old-web/login/: login.html
old-web/register/: register.js
server/: .gitignore  Cargo.toml  README.md
server/src/: main.rs  quote.rs  static_pages.rs  tasks.rs
server/src/auth/: mod.rs  register.rs
website/: Makefile  README.md  build-web.sh  package-lock.json  package.json
website/backend/: .gitignore  Cargo.toml
website/backend/res/: htracker.service
website/frontend/: package-lock.json  tailwind.config.js  vue.config.js
website/src/: index.css
(+32 files in other folders)
