[package]
name = "htracker-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "4.1", features = ["rustls"] }
pretty_env_logger = "0.4"
rand = "0.8"
serde = { version = "1", features = ["derive"]}
serde_json = "1.0"
mongodb = { version = "2.2", features = ["tokio-runtime"] }
tokio = { version = "1.19", features = ["full"] }
mailchecker = "4.1"
mailjet-rs = "0.2"
log = "0.4.17"
base64 = "0.13.0"
argh = "0.1.7"
rustls = "0.20"
rustls-pemfile = "1.0"
